--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,10 +24,25 @@ android {
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
+    // CardView
+        implementation "androidx.cardview:cardview:1.0.0"
+    // Material Design
+        implementation "com.google.android.material:material:1.2.0"
+
+    // ViewModel
+        implementation "androidx.lifecycle:lifecycle-viewmodel:2.2.0"
+    // LiveData
+        implementation "androidx.lifecycle:lifecycle-livedata:2.2.0"
+    // Annotation processor
+        annotationProcessor "androidx.lifecycle:lifecycle-compiler:2.2.0"
+
+    // Room
+        implementation "androidx.room:room-runtime:2.2.5"
+        annotationProcessor "androidx.room:room-compiler:2.2.5"
 }
